fix(components): Action bar overflow style issue

--- a/components/alert-bar/style.css
+++ b/components/alert-bar/style.css
@@ -1,7 +1,5 @@
 :host {
   --tcds-alert-bar-height: var(--tcds-size-large);
-
-  contain: content;
 }
 
 :host(:not([hidden])) {
